# latex2chin

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/scripts/: smoke_test.py
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: ast.rs  builder.rs  error.rs  latex.pest  latex_parser.rs  lib.rs  translator.rs
crates/core/tests/: test_builder.rs  test_parse_latex.rs  test_translator.rs
crates/py/: Cargo.toml
crates/py/src/: lib.rs
python/latex2chin/: __init__.py
src/: latex.pest  lib.rs  main.rs
tests/: test_parse_latex.rs
