[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "latex2chin"
version = "0.1.0"
description = "Convert LaTeX expressions to Chinese"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.27",
    "langchain-core>=0.3.83",
    "langchain-openai>=0.3.35",
    "maturin>=1.12.6",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
manifest-path = "crates/py/Cargo.toml"

[dependency-groups]
dev = [
    "httpx[socks]>=0.28.1",
]
