[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "latex2chin"
version = "0.1.0"
description = "Convert LaTeX expressions to Chinese"
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
llm = ["langchain>=0.3", "langchain-core>=0.3", "langchain-openai>=0.3"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
manifest-path = "crates/py/Cargo.toml"

[dependency-groups]
dev = [
    "httpx[socks]>=0.28.1",
]
